<resources>
    <string name="app_name" translatable="false">Rehabilitat</string>
    <string name="txtOlvideContrasena">Has oblidat la teva contrasenya?</string>
    <string name="txt_comentario_restablecer_contrasena">Per restablir contrasenya fes servir el numero de telfon o email</string>
    <string name="staturday" translatable="false">Staturday</string>
    <string name="videos">Vídeo</string>
    <string name="grafica">Grafica</string>
    <string name="calendario">Calendari</string>
    <string name="perfil">Perfil</string>
    <string name="iniciar">Inicia Sessió</string>
    <string name="crear">Crea Usuari</string>
    <string name="usuario">Usuari</string>
    <string name="contra">Contrasenya</string>
    <string name="T25" translatable="false">image_project</string>
    <string name="nya">Nom i cognoms</string>
    <string name="correo">Correu</string>
    <string name="sexo">Sexe</string>
    <string name="edad">Edat</string>
    <string name="altura">Altura</string>
    <string name="restablecer_contraseña">Restablir Contrasenya</string>
    <string name="buscar">Cerca</string>
    <string name="semana">Setmana</string>
    <string name="edita">Edita</string>
    <string name="title_activity_dias">Dies</string>
    <string name="action_settings">Opcions</string>
    <string name="explicacion_lunes">Per començar farem contraccions de la mà sense resistència, d aquesta manera agafarem la força necessària per fer els demes exercicis. Temps: 5 min</string>
    <string name="conseguit">Conseguit!</string>
    <string name="torna_hi">Repeteix ejercici!</string>
    <string name="mediocre">Mediocre</string>
    <string name="FET">Fet! Pasa al seguent dia</string>
    <string name="NOFET">Hauras de repetir :(</string>
    <string name="exercici_dimarts">Per els extensors, col·locarem la mà tocant la taula i intentarem despagar el colze cap amunt tot el que puguem, per millorar la flexibilitat Temps: 10 min</string>
    <string name="explicacio_dimecres">En aquest exercici mourem el canell d esquerra a dreta sobre una taula per millorar la flexibilitat dels extensors i a la vegada agafar força i control sobre la mà. Temps 5 min</string>
    <string name="exercici_dijous">Amb la braç en vertical i amb l altre mà aguantant-nos el canell desplaçarem el la mà davant i enrere. Temps: 10 min</string>
    <string name="exercici_divendres">Amb el braç vertical, en aquest exercici farem nomes un moviment de canell de costat a costat. Temps: 5 min</string>
    <string name="enllaç_web">Prem aqui per mes informacio a la web</string>
    <string name="lunes">Dilluns</string>
    <string name="martes">Dimarts</string>
    <string name="miercoles">Dimecres</string>
    <string name="jueves">Dijous</string>
    <string name="viernes">Divendres</string>
    <string name="staturday_peso">Introdueix el teu pes</string>
    <string name="staturday_muneca">Introdueix el tamany del teu canell</string>
    <string name="staturday_cintura">Introduce tamaño cintura</string>
    <string name="staturday_tiempo">Temps que has treballat durant la setmana</string>
    <string name="staturday_confirmar">Confirmar dades setmanals</string>
    <string name="grafico_peso">Peso(KG)</string>
    <string name="grafico_muneca">Muñeca(CM)</string>
    <string name="usuario_incorrecto">USUARIO I/O CONTRASEÑA INCORRECTOS</string>
    <string name="tomarfoto">Fer Foto</string>
    <string name="carregaIMG">Carrega Imatge</string>
    <string name="surt">Surt</string>
    <string name="escogeOpcion">Tria opcio</string>


</resources>