<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".PerfilActivity">

    <EditText
        android:id="@+id/etEdad2"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="#FFF"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSexo2" />

    <EditText
        android:id="@+id/etNombreApellidos2"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="128dp"
        android:background="#FFF"
        android:ems="10"
        android:hint="@string/nya"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCorreo2"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="#FFF"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreApellidos2" />

    <Button
        android:id="@+id/btnEdita"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/redondeado"
        android:text="@string/edita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContrasena2"
        app:layout_constraintVertical_bias="0.708" />

    <EditText
        android:id="@+id/etSexo2"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="#FFF"
        android:ems="10"
        android:hint="@string/sexo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo2" />

    <EditText
        android:id="@+id/etContrasena2"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="#FFF"
        android:ems="10"
        android:hint="@string/contra"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAltura2" />

    <EditText
        android:id="@+id/etAltura2"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="#FFF"
        android:ems="10"
        android:hint="@string/altura"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEdad2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="Perfil del Usuario"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>