<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorDeFondo"
    tools:context=".RestablecerContrasena">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:text="@string/restablecer_contraseña"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtComentario"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="GiveYouGlory.ttf"
        android:text="@string/txt_comentario_restablecer_contrasena"
        android:textSize="20sp"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/eTrestablecerContra"
        android:layout_width="334dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:background="#FFF"
        android:textColor="#000"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtComentario" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="68dp"
        android:onClick="onClickBuscar"
        android:background="@drawable/redondeado"
        android:text="@string/buscar"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTrestablecerContra" />
</android.support.constraint.ConstraintLayout>