<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearUsuari"
    android:background="#91e4fb">

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="246dp"
        android:layout_height="39dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="#FFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAltura" />

    <TextView
        android:id="@+id/lblContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="468dp"
        android:text="@string/contra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAltura"
        android:layout_width="246dp"
        android:layout_height="38dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="#FFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEdad" />

    <TextView
        android:id="@+id/lblAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="388dp"
        android:text="@string/altura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="246dp"
        android:layout_height="38dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:background="#FFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSexo" />

    <TextView
        android:id="@+id/lblEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSexo" />

    <EditText
        android:id="@+id/etSexo"
        android:layout_width="246dp"
        android:layout_height="38dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="#FFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo" />

    <TextView
        android:id="@+id/lblSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="228dp"
        android:text="@string/sexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblCorreu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="148dp"
        android:text="@string/correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="246dp"
        android:layout_height="38dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="#FFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreApellidos" />

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="318dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo_crear"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/titulo_crear" />

    <EditText
        android:id="@+id/etNombreApellidos"
        android:layout_width="246dp"
        android:layout_height="38dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="92dp"
        android:background="#FFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblNombreApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="68dp"
        android:text="@string/nya"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistrarUsuari"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="#72bb53"
        android:text="@string/crear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContrasena"
        app:layout_constraintVertical_bias="0.541" />
</android.support.constraint.ConstraintLayout>